# C-Lang-Homework.SZUIAS

./: .gitignore  README-01.md  README-02.md  README-03.md  meson.build
.github/workflows/: cmake-multi-platform.yml
src/: hw01.c  hw01.h  hw02.c  hw02.h  hw03.c  hw03.h  hw04.c  hw04.h  hw05.c  hw05.h  hw06.c  hw06.h  main.c  main.c.old  meson.build  my_string.c  my_string.h  read.c  read.h  types.c  types.h  vec.c  vec.h
src/parser/: lexer.yy
